@@ -84,6 +84,29 @@ theme_override_font_sizes/font_size = 56
 text = "1"
 horizontal_alignment = 1
 
+[node name="GuardPanel" type="PanelContainer" parent="Border"]
+unique_name_in_owner = true
+visible = false
+layout_mode = 1
+anchors_preset = 12
+anchor_top = 1.0
+anchor_right = 1.0
+anchor_bottom = 1.0
+offset_top = -58.0
+grow_horizontal = 2
+grow_vertical = 0
+
+[node name="HBoxContainer" type="HBoxContainer" parent="Border/GuardPanel"]
+layout_mode = 2
+
+[node name="GuardLabel" type="Label" parent="Border/GuardPanel/HBoxContainer"]
+unique_name_in_owner = true
+layout_mode = 2
+size_flags_horizontal = 3
+theme_override_font_sizes/font_size = 56
+text = "10000"
+horizontal_alignment = 1
+
 [node name="GradePanel" type="PanelContainer" parent="Border"]
 unique_name_in_owner = true
 visible = false
