@@ -1,8 +1,11 @@
 v.0002 Skills and Trigger selection
 - Updated for ArC v.0000004
 - Utilize VanguardAI from ArC, InputProviderFactory loads the AI data
+- Added Guard value in Card
 - Implemented Card can be placed for Guarding
     - Can return cards back to hand
+    - When guarding, the cards shows Guard value temporarily
+- Rearguards can be retired when attacked successfully
 
 v.0001 Duel Creatures
 - Created Placeholder card
